lemon/platform/haproxy/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy
  namespace: haproxy
  annotations:
    oci-network-load-balancer.oraclecloud.com/is-preserve-source: "true"
    oci-network-load-balancer.oraclecloud.com/security-list-management-mode: All
    oci.oraclecloud.com/load-balancer-type: nlb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: minecraft
    port: 25565
    targetPort: 25565
    protocol: TCP
  - name: mc-vanilla
    port: 35565
    targetPort: 35565
    protocol: TCP
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
  - name: ldap
    port: 389
    targetPort: 8389
    protocol: TCP
  - name: ldaps
    port: 636
    targetPort: 8636
    protocol: TCP
  - name: vault-audit
    port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app: haproxy
