lemon/platform/haproxy/config/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: haproxy-block-malicious-ips
  namespace: haproxy
spec:
  podSelector:
    matchLabels:
      app: haproxy
  policyTypes:
  - Ingress
  ingress:
  # Allow all traffic except blocked IPs (blacklist approach)
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        # Blocked malicious IPs
        - 104.197.69.115/32
        - 109.149.23.4/32
        - 121.127.34.106/32
        - 121.91.235.186/32
        - 13.56.149.3/32
        - 147.185.132.76/32
        - 148.153.56.62/32
        - 155.248.184.241/32
        - 157.143.20.83/32
        - 157.143.30.12/32
        - 159.65.216.50/32
        - 159.89.194.131/32
        - 16.145.94.216/32
        - 164.90.151.185/32
        - 164.92.107.174/32
        - 167.71.66.217/32
        - 172.192.18.188/32
        - 185.12.59.118/32
        - 185.242.177.50/32
        - 185.247.137.152/32
        - 185.247.137.178/32
        - 185.247.137.212/32
        - 185.247.137.225/32
        - 188.166.49.70/32
        - 192.159.99.95/32
        - 193.142.147.209/32
        - 195.178.110.201/32
        - 198.235.24.152/32
        - 20.168.113.228/32
        - 20.24.218.130/32
        - 205.169.39.0/24
        - 208.84.101.251/32
        - 216.106.189.40/32
        - 23.98.91.210/32
        - 2.58.56.101/32
        - 3.101.132.77/32
        - 3.233.59.216/32
        - 34.123.170.104/32
        - 34.26.246.252/32
        - 35.167.205.129/32
        - 37.46.196.22/32
        - 4.147.185.30/32
        - 4.189.171.149/32
        - 4.189.253.242/32
        - 4.194.85.10/32
        - 4.217.217.154/32
        - 4.218.20.75/32
        - 44.200.137.196/32
        - 45.135.193.9/32
        - 45.154.98.70/32
        - 51.77.218.191/32
        - 74.7.175.0/24
        - 74.7.227.0/24
        - 78.153.140.171/32
        - 78.153.140.179/32
        - 79.100.14.146/32
        - 87.236.176.180/32
        - 87.236.176.225/32
        - 87.236.176.234/32
        - 91.239.216.99/32
        - 95.214.52.170/32
    ports:
    - protocol: TCP
      port: 25565  # minecraft
    - protocol: TCP
      port: 35565  # mc-vanilla
    - protocol: TCP
      port: 8080   # http
    - protocol: TCP
      port: 8443   # https
    - protocol: TCP
      port: 8389   # ldap
    - protocol: TCP
      port: 8636   # ldaps
    - protocol: TCP
      port: 9090   # vault-audit
  - from:
    - namespaceSelector: { }
    - podSelector: { }
